# MCP

./: .clinerules  .cspell-pt-br.json  .cspell.json  .flake8  .pre-commit-config.yaml  .secrets.baseline  memoryBank.md  projectBrief.md  pyproject.toml
azure-devops-mcp/: package-lock.json  package.json
cline_docs/: activeContext.md  pre-commit-fix.md  productContext.md  progress.md  systemPatterns.md  techContext.md
mcp-playwright-plus/: insert-variables.sh
mcp-playwright-plus/.roo/: system-prompt-architect  system-prompt-ask  system-prompt-code  system-prompt-debug  system-prompt-test
pre-commit-server-py/: .clinerules-architect  .clinerules-ask  .clinerules-code  .clinerules-debug  .clinerules-test  pre_commit_server.py  projectBrief.md  requirements.txt
pre-commit-server-py/.roo/: system-prompt-architect  system-prompt-ask  system-prompt-code  system-prompt-debug  system-prompt-test
pre-commit-server-py/cline_docs/: activeContext.md  parallel_execution_spec.md  productContext.md  progress.md  systemPatterns.md  techContext.md  test-strategy.md
zabbix-server-api/: README.md  projectBrief.md  requirements.txt  setup.py  uv_project_management.md
zabbix-server-api/.roo/: system-prompt-architect  system-prompt-ask  system-prompt-code  system-prompt-debug  system-prompt-test
zabbix-server-api/cline_docs/: activeContext.md  mcp-plugin-zabbix-trigger-plan.md  memory-bank-init-plan.md  memory-bank-update-plan.md  productContext.md  progress.md  systemPatterns.md  techContext.md  test-strategy.md  umb-authentication-workflow-plan.md  (+2 more)
(+14 files in other folders)
