[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
preview = true  # Enable preview features for more aggressive formatting
extend-exclude = '''
# A regex preceded with ^/ will apply only to files and directories
# in the root of the project.
^/build/
^/dist/
^/.git/
^/__pycache__/
'''

[tool.bandit]
exclude_dirs = ["tests", "build", "dist"]
skips = ["B311", "B404", "B603"]  # Skip warnings about random, subprocess import, and subprocess calls
targets = ["src", "scripts", "pre-commit-server-py"]

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"
